# dcastratanalysis

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb
results/: benchmark_results.parquet  robustness_results.parquet
src/: __init__.py  benchmark_runner.py  dashboard.py  dashboard_results.py  data_loader.py  generate_comparison_report.py  generate_crisis_report.py  metrics.py  optuna_search.py  robustness_validator.py  strategies_catalog.py  strategy_core.py
tests/: test_strategy.py
